...
                    android:text="@string/mark_empty_location"
                    android:textColor="?attr/colorSecondary"
                    android:textStyle="bold"
                    tools:visibility="gone" />

                <LinearLayout
                    android:id="@+id/editLy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:orientation="vertical"
                    android:padding="8dp">

...
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/sku"
                            app:boxBackgroundColor="#FFFFFF">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/skuEt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/ic_baseline_camera_alt_24"
                                android:focusable="true"
                                android:focusableInTouchMode="true"
                                android:imeOptions="actionSearch"
...
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:hint="@string/quant"
                            app:boxBackgroundColor="#FFFFFF">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/quantityEt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/ic_baseline_calculate_24"
                                android:focusable="true"
                                android:imeOptions="actionSend"
                                android:inputType="number|numberDecimal"
...
                                android:minLines="1"
                                android:selectAllOnFocus="true"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/saveBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|right|center_horizontal|end"
                            android:clickable="true"
                            android:cropToPadding="false"
                            android:focusable="true"
...
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/expiryDateContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/expiry_date"
                        app:boxBackgroundColor="#FFFFFF"
                        tools:visibility="gone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/expiryDateEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>

...
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_appintro_fab_background"
        app:srcCompat="@drawable/ic_arrow_left___334_" />

    <ImageButton
        android:id="@+id/rightBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_appintro_fab_background"
...
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/total_counts" />

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
...
