...
    <string name="base_url_hint">Establece la url del proveedor de datos</string>
    <string name="data_origin">Origen de datos</string>
    <string name="warning">Advertencia</string>
    <string name="user_denied_permission_msg">Al denegar estos permisos la aplicacion no podra funcionar correctamente</string>
    <string name="user_disabled_permission_msg">Usted tiene desactivados ciertos permisos importantes. Por favor revise en la configuracion de la aplicacion</string>
    <string name="start">iniciar</string>
    <string name="pause">pausar</string>
    <string name="finalize">finalizar</string>
    <string name="resume">reanudar</string>
    <string name="title_activity_count">CountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

...
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="done">HECHO</string>
    <string name="demo_task_code">P11-3-50</string>
    <string name="demo_task_pagination">2 de 2</string>
    <string name="sku">SKU</string>
    <string name="description">Descripcion</string>
    <string name="quantity">Cantidad</string>
    <string name="quant">Cant</string>
...
    <string name="not_more_items">No hay mas items</string>
    <string name="location_pagination">%1$d de %2$d</string>
    <string name="sku_not_found">SKU no encontrado</string>
    <string name="invalid_item">Item invalido</string>
    <string name="not_more_locations">No hay mas ubicaciones</string>
    <string name="invalid_item_count">Conteo Invalido</string>
    <string name="demo_sku">044306</string>
    <string name="demo_description">GALLETAS OREO 11 x 50</string>
    <string name="demo_quantity">12</string>
    <string name="counts">Conteos: %1$d</string>
    <string name="confirmation">Confirmacion</string>
    <string name="save_count_confirm_msg">Esta seguro de contar %1$.2f unidades de %2$s</string>
    <string name="delete_count_confirm_msg">Esta seguro de eliminar este conteo?</string>
...
    <string name="previous_task">Tarea Anterior</string>
    <string name="barcode_scanner">Escanear Codigo</string>
    <string name="not_more_tasks">No hay mas tareas</string>
    <string name="save_all_counts">GUARDAR TODOS LOS CONTEOS (%1$d)</string>
    <string name="total_counts">Total Conteos: %1$d</string>
    <string name="total_task_counts">Total conteos de la tarea: %1$d</string>
    <string name="save_pending_counts">GUARDAR PENDIENTES (%1$d)</string>
    <string name="save_task_pending_counts">GUARDAR PENDIENTES DE LA TAREA (%1$d)</string>
    <string name="empty_owner_error_msg">Owner recibido es invalido</string>
    <string name="device_data_empty_error_msg">Los datos del dispositivo no pudieron ser obtenidos</string>
    <string name="lot">Lote</string>
    <string name="lpn">Lpn</string>
    <string name="created_date">Fecha Creacion</string>
...
