<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemCard"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/taskStateTv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:text="SP"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taskNumberTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/demo_task_title_line"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/optionsBtn"
            app:layout_constraintStart_toEndOf="@+id/taskStateTv"
            app:layout_constraintTop_toTopOf="@+id/taskStateTv" />

        <ImageButton
            android:id="@+id/optionsBtn"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_more_vert_24" />

        <TextView
            android:id="@+id/taskResumeLineTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_task_resume_line"
            app:layout_constraintBottom_toBottomOf="@+id/taskStateTv"
            app:layout_constraintStart_toStartOf="@+id/taskNumberTv"
            app:layout_constraintTop_toBottomOf="@+id/taskNumberTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>